src/test/resources/de/cd4analysis/cocos/valid/U0447.cd
package de.cd4analysis.cocos;

classdiagram U0447 {
  class C1 {
    int c = 1;
  }  
}